--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Big+Shoulders+Text|Fresca|Old+Standard+TT|Oleo+Script+Swash+Caps|Quando|Share+Tech|Slabo+27px|Volkhov&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-fluid">
         <!--home-->
         <div class="row home_background">
             <div class="col-md-12 home_background_text">
-                <img src="image/logo/logo.png" alt="">
-                <h1 class="display-3">WELCOME</h1><br><br>
-                <h1 class="display-3">TO DELANI STUDIO</h1>
-                <h5>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN
-
+                <h1 class="display-3">LA PIZZERIA</h1><br><br>
+               
     </div>
 </body>
 </html>
