adding image to overlay

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href=""><span class="fab fa-facebook icon_facebook"></span></a>
                 <a href=""><span class="fab fa-twitter icon_twitter"></span></a>
                 <a href=""><span class="fab fa-google-plus icon_googlep"></span></a>
-                 <a href=""><span class="fab fa-linkedin icon_linkedin"></span></a>
+                  href=""><span class="fab fa-linkedin icon_linkedin"></span></a>
             </div>
         </div>
     </div>
