adding menu button to overlay

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#order">Orders</a></li>
             <li><a href="#contact">Contacts</a></li>
         </ul>
-    </div>tn 
+    </div>
 </nav>
 <!--End Navigation-->
 
@@ -38,7 +38,7 @@
                 <a href=""><span class="fab fa-facebook icon_facebook"></span></a>
                 <a href=""><span class="fab fa-twitter icon_twitter"></span></a>
                 <a href=""><span class="fab fa-google-plus icon_googlep"></span></a>
-                  href=""><span class="fab fa-linkedin icon_linkedin"></span></a>
+                 <a href=""><span class="fab fa-linkedin icon_linkedin"></span></a>
             </div>
         </div>
     </div>
