adding pizza images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="push"></div>
         <div class="landing-text">
             <h1 class="text-white text-center"><span class="pizz">La </span><span class="exc">Pizzeria!</span></h1>
-            <h2 class="text-white text-center">Get your pizza in an instant.</h2>
+            <h2 class="text-white text-center">Get your pizza in an Gify.</h2>
         </div>
         <div class="h-buttons text-center">
             <a href="#welcome">
@@ -58,7 +58,7 @@
                 </a>
             </div>
         </div>
-    </div>tn 
+    </div>
 </div>
 <!--Start Content-->
 
@@ -69,15 +69,15 @@
         <h1 class="text-center text-white" id="menu">Menu</h1>
         <div class="pizza-menu row text-center">
             <figure class="col-sm-4">
-                <img src="images/2.png" alt="small-pizza" class="wiggle">
+                <img src="images/small.jpeg" alt="small-pizza" class="wiggle">
                 <figcaption class="text-white">Regular<br>Ksh. 300</figcaption>
             </figure>
             <figure class="col-sm-4">
-                <img src="images/1.png" alt="medium-pizza" class="wiggle">
+                <img src="https://bit.ly/3acDmwL" alt="medium-pizza" class="wiggle">
                 <figcaption class="text-white">Medium<br>Ksh. 600</figcaption>
             </figure>
             <figure class="col-sm-4">
-                <img src="images/3.png" alt="large-pizza" class="wiggle">
+                <img src="https://bit.ly/2wgw6BC" alt="large-pizza" class="wiggle">
                 <figcaption class="text-white">Large<br>Ksh. 1200</figcaption>
             </figure>
         </div>
