adding prices to menu

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 </div>
-
+<!--orders-->
 <div class="orders" id="order">
     <h1 class="text-center" id="order-pizza">Order Pizza</h1>
     <div class="form-group row">
