adding toppings and crust selection table

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 </div>
-<!--orders-->
+<!--order-->
 <div class="orders" id="order">
     <h1 class="text-center" id="order-pizza">Order Pizza</h1>
     <div class="form-group row">
@@ -99,7 +99,7 @@
                     <option value="boerewors">Boerewors</option>
                     <option value="hawaiian">Hawaiian</option>
                     <option value="mushroom">Chicken and Mushroom</option>
-                    <option value="regina">Regina Pizza</option>
+                    <option value="Secret"> Secret recipe</option>
                 </select>
                 <label>Chose your preferred Size:</label>
                 <select class="custom-select custom-select-md mb-3" id="size" required>
@@ -110,25 +110,25 @@
                 <label for="crust">Choose your favorite Crust:</label>
                 <select class="custom-select custom-select-md mb-3" id="crust" required>
                     <option value="thin">Thin Crust @ Ksh. 100</option>
-                    <option value="thick">Thick Crust @ Ksh. 150</option>
+                    <option value="thick">Thick Crust @ Ksh. 200</option>
                     <option value="flatbread">FlatBread Crust @ sh. 180</option>
                     <option value="custom">Custom Crust @ sh. 280</option>
                 </select>
                 <label>Select Your favourite Toppings</label>
                 <select class="custom-select custom-select-md mb-3" id="toppings" required>
-                    <option value="tomato">Tomato @ sh. 80</option>
-                    <option value="onions">Onions @ sh. 80</option>
+                    <option value="tomato">Tomato @ sh. 50</option>
+                    <option value="onions">Onions @ sh. 50</option>
                     <option value="mushroom">Mushroom @ sh. 80</option>
-                    <option value="greenpepper">Green Pepper @ sh. 80</option>
+                    <option value="greenpepper">Green Pepper @ sh. 50</option>
                     <option value=""></option>
-                    <option value="olives">Olives @ sh. 120</option>
-                    <option value="pineapple">Pineapple @ sh. 120</option>
-                    <option value="sweetcorn">Sweet Corn @ sh. 120</option>
-                    <option value="macon">Macon @ sh. 120</option>
-                    <option value="mince">Mince @ sh. 120</option>
+                    <option value="olives">Olives @ sh. 130</option>
+                    <option value="pineapple">Pineapple @ sh. 130</option>
+                    <option value="sweetcorn">Sweet Corn @ sh. 130</option>
+                    <option value="macon">Macon @ sh. 130</option>
+                    <option value="mince">Mince @ sh. 130</option>
                     <option value=""></option>
-                    <option value="beef">Beef Peperoni @ sh. 170</option>
-                    <option value="chicken">Periperi Chicken @ sh. 170</option>
+                    <option value="beef">Beef Peperoni @ sh. 180</option>
+                    <option value="chicken">Periperi Chicken @ sh. 180</option>
                 </select>
                 <label for="number">Number of Pizza's</label>
                 <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
@@ -148,7 +148,7 @@
 
 <div class="order-summary" id="sum-order">
     <h1 class="text-center" id="summary">Order Summary</h1>
-    <h2 class="text-center summary">Hello there, your order is as follows:</h2>
+    <h2 class="text-center summary">Hey,this is your order:</h2>
     <ol id="list" class="text-center sum">
     </ol>
 
