--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div class="orders" id="order">
     <h1 class="text-center" id="order-pizza">Order Pizza</h1>
     <div class="form-group row">
-        <div class="col-sm-2"></div>
+        <div class="col-sm-2"></div
         <div class="col-sm-8 order-overlay text-center">
             <form class="col-sm-6 offset-sm-3 text-center">
                 <label>Pick your pizza Flavour:</label>
