adding form inputs

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div class="orders" id="order">
     <h1 class="text-center" id="order-pizza">Order Pizza</h1>
     <div class="form-group row">
-        <div class="col-sm-2"></di
+        <div class="col-sm-2"></div>
         <div class="col-sm-8 order-overlay text-center">
             <form class="col-sm-6 offset-sm-3 text-center">
                 <label>Pick your pizza Flavour:</label>
@@ -148,7 +148,7 @@
 
 <div class="order-summary" id="sum-order">
     <h1 class="text-center" id="summary">Order Summary</h1>
-    <h2 class="text-center summary">Hey,this is your order:</h2>
+    <h2 class="text-center summary">Hey,this is your :</h2>
     <ol id="list" class="text-center sum">
     </ol>
 
@@ -179,7 +179,7 @@
             <div class="col-sm-1"></div>
             <div class="col-sm-5 subs">
                 <h1 class="text-white text-center"> Call Us </h1>
-                <p class="text-center">+254 1211 5461</p>
+                <p class="text-center">+254 1446850</p>
                 <form>
                     <div class="email-info">
                         <div class="form-group fill-all-form">
@@ -193,7 +193,7 @@
                 </form>
             </div>
             <div class="col-sm-5">
-                <h4 class="text-center get-pizza">We love feedback..send us a mail</h4>
+                <h4 class="text-center get-pizza">For a feedback..send us an email</h4>
             </div>
             <div class="col-sm-1"></div>
         </div>
