adding delivery buttons

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     <div class="d-block mx-auto text-center">
         <button class='deliver'>Make Delivery</button>
-        <button class='delivernot'>Pick Up</button>
+        <button class='delivernot'>Pick Up</butto
     </div>
 </div>
 
