adding contact overlay

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     <div class="d-block mx-auto text-center">
         <button class='deliver'>Make Delivery</button>
-        <button class='delivernot'>Pick Up</butto
+        <button class='delivernot'>Pick Up</button>
     </div>
 </div>
 
@@ -181,7 +181,7 @@
                 <h1 class="text-white text-center"> Call Us </h1>
                 <p class="text-center">+254 1446850</p>
                 <form>
-                    <div class="email-info">
+                    <div class="email-info"
                         <div class="form-group fill-all-form">
                             <input type="email" class="form-control bg-transparent email" id="email" placeholder="Email"
                                    required="">
