--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <h1 class="text-white text-center"> Call Us </h1>
                 <p class="text-center">+254 1446850</p>
                 <form>
-                    <div class="email-info"
+                    <div class="email-info"></div>
                         <div class="form-group fill-all-form">
                             <input type="email" class="form-control bg-transparent email" id="email" placeholder="Email"
                                    required="">
@@ -193,7 +193,7 @@
                 </form>
             </div>
             <div class="col-sm-5">
-                <h4 class="text-center get-pizza">For a feedback..send us an email</h4>
+                <h4 class="text-center gt-pizza">For a feedback..send us an email</h4>
             </div>
             <div class="col-sm-1"></div>
         </div>
