--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
                 </select>
                 <label for="crust">Choose your favorite Crust:</label>
                 <select class="custom-select custom-select-md mb-3" id="crust" required>
-                    <option value="thin">Thin Crust @ Ksh. 100</option>
-                    <option value="thick">Thick Crust @ Ksh. 200</option>
-                    <option value="flatbread">FlatBread Crust @ sh. 180</option>
-                    <option value="custom">Custom Crust @ sh. 280</option>
+                    <option value="crispy">Crispy Crust @ Ksh. 100</option>
+                    <option value="stuffed">Stuffed Crust @ Ksh. 200</option>
+                    <option value="gluten-free">Gluten-free Crust @ sh. 180</option>
+                    
                 </select>
                 <label>Select Your favourite Toppings</label>
                 <select class="custom-select custom-select-md mb-3" id="toppings" required>
@@ -193,7 +193,7 @@
                 </form>
             </div>
             <div class="col-sm-5">
-                <h4 class="text-center gt-pizza">For a feedback..send us an email</h4>
+                <h4 class="text-center get-pizza">For a feedback..send us an email</h4>
             </div>
             <div class="col-sm-1"></div>
         </div>
