--- a/index.html
+++ b/index.html
@@ -103,7 +103,12 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-8 order-overlay text-center">
             <form class="col-sm-6 offset-sm-3 text-center">
-               
+               <label>Pizza quality:</label>
+                <select class="custom-select custom-select-md mb-3 flavour" required>
+                  <option value="High_quality">High Quality</option>
+                    <option value="medium_quality">Medium Quality</option>
+                    <option value="low_quality">Low Quality</option>
+                </select>'
                 <label>Preferred Size:</label>
                 <select class="custom-select custom-select-md mb-3" id="size" required>
                     <option value="small">Small</option>
@@ -123,7 +128,6 @@
                     <option value="onions">Onions @ sh. 50</option>
                     <option value="mushroom">Mushroom @ sh. 80</option>
                     <option value="greenpepper">Green Pepper @ sh. 50</option>
-                    <option value=""></option>
                     <option value="olives">Olives @ sh. 130</option>
                     <option value="beef">Beef Peperoni @ sh. 180</option>
                     <option value="chicken">Periperi Chicken @ sh. 180</option>
