added final changes

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-8 order-overlay text-center">
             <form class="col-sm-6 offset-sm-3 text-center">
-               <label>Pizza quality:</label>
+                <label>Pizza Flavour:</label>
                 <select class="custom-select custom-select-md mb-3 flavour" required>
-                  <option value="High_quality">High Quality</option>
-                    <option value="medium_quality">Medium Quality</option>
-                    <option value="low_quality">Low Quality</option>
-                </select>'
+                  <option value="vegtikka">Veg Tikka</option>
+                    <option value="bbq">BBQ Steak</option>
+                    <option value="hawaiian">Hawaiian</option>
+                </select>
                 <label>Preferred Size:</label>
                 <select class="custom-select custom-select-md mb-3" id="size" required>
                     <option value="small">Small</option>
