addind fonts to text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker|Rock+Salt&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Pangolin|Permanent+Marker|Rock+Salt&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Start Navigation //-->
@@ -49,10 +51,10 @@
                 <img src="images/man.jpeg" alt="" class="man-img">
             </div>
             <div class="col-md-6 man-txt">
-                <h1 class="text-center txt txt-big">Welcome <span class="pizz">to </span><span class="exc">Pizzeria!</span>
+                <h1 class="text-center txt txt-big"><span class="pizz">Welcome to </span><span class="exc">Pizzeria!</span>
                 </h1>
-                <p class="text-center txt">The best pizza you'll ever taste</p>
-                <p class="text-center txt">Order your pizza and we will deliver it to your location.</p>
+                <p class="text-center txt" >The best pizza you'll ever taste</p>
+                <p class="text-center txt" >Order your pizza and we will deliver it to your location.</p>
                 <a href="#menus">
                     <button class="btn bg-info mx-auto d-block menu-btn">Menu</button>
                 </a>
